apps/immich/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-server:v3.3.1
          ports:
            - containerPort: 2283
              name: http
          resources:
            requests:
              cpu: "500m"
              memory: "1024Mi"
            limits:
              cpu: "2000m"
              memory: "4Gi"
          volumeMounts:
            - mountPath: /usr/src/app/upload
              name: uploads
            - mountPath: /usr/src/app/library
              name: library
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: immich-uploads
        - name: library
          persistentVolumeClaim:
            claimName: immich-library
