apps/immich/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: media
spec:
  selector:
    app: immich-server
  ports:
    - port: 2283
      targetPort: 3001
