apps/immich/server/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: media
spec:
  hostnames:
  - immich.tomasmerino.com
  parentRefs:
    - name: homelab-gateway
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
      - name: immich
        port: 2283
